tests/cases/parser/literals/characters/unclosed_unicode_literal.stderr
error: unclosed unicode escape sequence
 --> $DIR/unclosed_unicode_literal.hash:3:14
2 |   
3 |   k := '\u{005a';
  |                ^ expected `}` here
