tests/cases/parser/literals/characters/unclosed_unicode_literal.hash
// run=fail, stage=parse

k := '\u{005a';
